src/objects/JIRA_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Originally &quot;End Date&quot; field, which was changed to &quot;Date&quot; at the request of the business</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experiences_and_Releases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Milestone is related to a SW Experience or Release</inlineHelpText>
        <label>Experiences and Releases</label>
        <referenceTo>SW_Experiences_and_Releases__c</referenceTo>
        <relationshipLabel>SW Exp/Rel Milestones</relationshipLabel>
        <relationshipName>SW_ExpRel_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Milestone is related to a SW Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>SW Project Milestones</relationshipLabel>
        <relationshipName>JIRA_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF(text(Status__c) = &quot;In Danger&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;), 
IF(text(Status__c) = &quot;Behind&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;), 
IF(text(Status__c) = &quot;On Track&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;), 
IF(text(Status__c) = &quot;Completed&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlO9&quot;, &quot;Clear&quot;), 
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dogfood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishfood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SW Project Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Project Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>